# embed-python

./: CMakeLists.txt  README.md
src/: main.cpp  spammodule.cpp
